--- a/src/app/cake/cake/cake.component.html
+++ b/src/app/cake/cake/cake.component.html
@@ -1,4 +1,4 @@
-<div data-v-94af1e57="" data-v-22e5a53e="" class="question-html-content mb-3 narrow copy-protection d-print-none">
+<div >
     <p>Finish the <em>IngredientsComponent</em> and <em>CakeComponent </em>component. </p>
 
         <p>The IngredientsComponent components will receive an array of strings as the <em>ingredients</em> array.
@@ -15,4 +15,4 @@
 
  
 
-<app-ingredients [ingredients]="ingredients"></app-ingredients>
+<app-ingredients></app-ingredients>
