--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <ul>
   <li><a [routerLink]="'/cake'">Cake</a></li>
   <li><a [routerLink]="'/temperature'">Temperature</a></li>
+  <li><a [routerLink]="'/tests'">tests</a></li>
 </ul>
 
 
 <router-outlet></router-outlet>
+
+<app-toast-containrer></app-toast-containrer>
